# p2p-perf-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: api.md  code-style.md  frontend.md  measurement.md  security.md  testing.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  nic_telemetry.py  parser.py  runner.py  schemas.py  state.py
app/api/: health.py  measure.py  stream.py
context/: nic-environment.md
docs/: implementation-plan.md  ui-ux-spec.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: BandwidthChart.svelte  ControlPanel.svelte  HardwareDiagram.svelte  Header.svelte  KpiCards.svelte  NicTempPanel.svelte  StatusBadge.svelte
frontend/src/lib/stores/: measurement.svelte.ts  nic_telemetry.svelte.ts  session.svelte.ts
frontend/src/lib/types/: api.ts
frontend/src/lib/utils/: api.ts  format.ts  sse.ts
frontend/src/routes/: +layout.ts  +page.svelte
handoff/: current-state.md
mockup/: README.md  index.html
scripts/: health-check.sh  install.sh  poc.py  uninstall.sh
systemd/: p2p-monitor.service
tests/: conftest.py  test_api.py  test_nic_telemetry.py  test_parser.py  test_runner.py  test_schemas.py  test_sse.py  test_state.py
tests/fixtures/: iperf3_failed.json  iperf3_tcp_8streams.json  iperf3_tcp_bidir.json  perftest_ib_read_lat.txt  perftest_ib_write_bw_200g_bidir.txt  perftest_ib_write_bw_200g_uni.txt  sensors_dg5r.json  sensors_dg5w.json
