[project]
name = "p2p-perf-monitor"
version = "0.1.0"
description = "Real-time web-based monitor for P2P NIC performance (200G ConnectX-7 RoCE) — exhibition demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncssh>=2.18",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP", "RUF", "S"]
ignore = [
    "S101",  # assert used (테스트에서 빈번)
    "RUF001", "RUF002", "RUF003",  # 한글 주석 ambiguous-character 무시
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S108"]  # 테스트 패스워드/임시경로 허용
"scripts/**/*.py" = ["T201"]                  # CLI에서 print 허용

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests requiring live NIC environment (CI 기본 제외)",
    "slow: tests taking longer than 30s",
]
testpaths = ["tests"]
addopts = "--strict-markers"
